--- a/classproject/index.html
+++ b/classproject/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Per Ardua</title>
+    <title>Class Project</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 
 <body>
     <header>
-        <h1 class="site-heading">Scribler</h1>
-        <p>Per Ardua</p>
+        <h1 class="site-heading">Class Projects</h1>
     </header>
 
 
@@ -20,15 +19,14 @@
 
     <div class="center">
         <nav class="navigation-left">
-            <p>nav stuff</p>
-            <p>nav stuff</p>
+            <a href="#">project 1</a>
         </nav>
 
 
         <main class="articles">
             <article>
                 <h2>About This Page</h2>
-                <p>This page is devoted to my projects and my learning process on my way to becoming a web developer.  Here I will post all of my personal projects and blog posts.</p>
+                <p>This is the landing page for all of my course projects.</p>
             </article>
         </main>
     </div>
