--- a/classproject/index.html
+++ b/classproject/index.html
@@ -27,6 +27,7 @@
             <article>
                 <h2>About This Page</h2>
                 <p>This is the landing page for all of my course projects.</p>
+                <p>This is a test</p>
             </article>
         </main>
     </div>
