--- a/classproject/index.html
+++ b/classproject/index.html
@@ -19,7 +19,10 @@
 
     <div class="center">
         <nav class="navigation-left">
-            <a href="#">project 1</a>
+            <ul>
+                <li> <a href="index.html">Main Page</a> </li>
+                <li> <a href="001 Personal Site/personalsite.html">Personal Site</a> </li>
+            </ul>
         </nav>
 
 
