--- a/classproject/001 Personal Site/personalsite.html
+++ b/classproject/001 Personal Site/personalsite.html
@@ -8,11 +8,26 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <img class="headshot" src="imgs/circleme.png" alt="Steven profile picture">
         <h1>Steven McIntyre</h1>
-        <p>Web Developer</p>
-        <br />
-        <h2>BIO</h2>
-        <p>About me stuff goes here.</p>
+            <p><em>Aspiring Web Developer</em></p>
+            <p> I am a student of <em>web developement</em>.  I currently work in customer Service.  I love spending time with friends, going on adventures, motorcycles, and studying philosophy. 
+            </p>
+            <hr>
+        <h3>Education</h3>
+            <ul>
+                <li>Strathroy Collegiat Institute</li>
+                <li>Fanshawe College - Machinist LVL 2</li>
+                <li>Udemy</li>
+            </ul>
+        <h3>Hobbies</h3>
+        <ol>
+            <li>Bicycling</li>
+            <li>Motorcycles</li>
+            <li>Sailing</li>
+            <li>Windsurfing</li>
+            <li>Snowboarding</li>
+        </ol>
     
         <a href="../index.html">Main Page</a>
         <script src="scripts.js"></script>
