Personal site project added tables

--- a/classproject/001 Personal Site/personalsite.html
+++ b/classproject/001 Personal Site/personalsite.html
@@ -8,28 +8,72 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <img class="headshot" src="imgs/circleme.png" alt="Steven profile picture">
-        <h1>Steven McIntyre</h1>
-            <p><em>Aspiring Web Developer</em></p>
-            <p> I am a student of <em>web developement</em>.  I currently work in customer Service.  I love spending time with friends, going on adventures, motorcycles, and studying philosophy. 
-            </p>
-            <hr>
+        <header>
+            <table>
+                <tr>
+                    <td>
+                        <img class="headshot" src="imgs/circleme.png" alt="Steven profile picture">
+                    </td>
+                    <td class="aboutme">
+                        <h1>Steven McIntyre</h1>
+                            <p><em>Aspiring Web Developer</em></p>
+                            <p> I am a student of <em>web developement</em>.  I currently work in customer Service.  I love spending time with friends, going on adventures, motorcycles, and studying philosophy. 
+                            </p>
+                    </td>
+                </tr>
+            </table>
+
+        </header>
+    <hr>
         <h3>Education</h3>
             <ul>
                 <li>Strathroy Collegiat Institute</li>
                 <li>Fanshawe College - Machinist LVL 2</li>
-                <li>Udemy</li>
+                <li>Udemy - The Complete 2021 Web Developement Bootcamp (in progress).</li>
             </ul>
-        <h3>Hobbies</h3>
-        <ol>
-            <li>Bicycling</li>
-            <li>Motorcycles</li>
-            <li>Sailing</li>
-            <li>Windsurfing</li>
-            <li>Snowboarding</li>
-        </ol>
-    
-        <a href="../index.html">Main Page</a>
+    <hr>
+        <h3>Work Experience</h3>
+        <table>
+
+        </table>
+    <hr>
+        <h3>Work Experience</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Dates</th>
+                    <th>Work</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2016-2021</td>
+                    <td>Customer Service Representative</td>
+                </tr>
+                <tr>
+                    <td>2020 - 2021</td>
+                    <td>Web Developement Student</td>
+                </tr>
+                <tr>
+                    <td>2021 - Present</td>
+                    <td>Test Entry</td>
+                </tr>
+                <tr>
+                    <td>2021 - Present</td>
+                    <td>Test Entry</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>Footer</td>
+                </tr>
+            </tfoot>
+        </table>
+    <hr>
+        <h3><a href="myhobbies.html">My Hobbies</a></h3>
+        <h3><a href="contact.html"</a>Contact Me</a></h3>
+    <hr>
+        <p>Return to <a href="../index.html"><strong>main page</strong></a></p>
         <script src="scripts.js"></script>
     </body>
 </html>
