--- a/classproject/001 Personal Site/personalsite.html
+++ b/classproject/001 Personal Site/personalsite.html
@@ -70,6 +70,32 @@
             </tfoot>
         </table>
     <hr>
+        <h3>Skills</h3>
+        <table>
+            <thead>
+                <tr>
+                    <td>SKILL</td>
+                    <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
+                    <td>SKILL</td>
+                    <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>HTML</td>
+                    <td>&#11088;&#11088;&#11088;</td>
+                    <td>SASS</td>
+                    <td>&#11088;&#11088;</td>
+                </tr>
+                <tr>
+                    <td>CSS</td>
+                    <td>&#11088;&#11088;</td>
+                    <td>Javascript</td>
+                    <td>&#11088;&#11088;</td>
+                </tr>
+            </tbody>
+        </table>
+    <hr>
         <h3><a href="myhobbies.html">My Hobbies</a></h3>
         <h3><a href="contact.html"</a>Contact Me</a></h3>
     <hr>
