working on forms

--- a/classproject/001 Personal Site/contact.html
+++ b/classproject/001 Personal Site/contact.html
@@ -4,17 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Contact Info</title>
 </head>
 <body>
-    <img class="headshot" src="imgs/circleme.png" alt="Steven profile picture">
+<!--     <img class="headshot" src="imgs/circleme.png" alt="Steven profile picture"> -->
     <h1>Steven McIntyre</h1>
+    <hr>
     <h3>Phone</h3>
     <p>3-333-333-3333</p>
+    <hr>
     <h3>Email</h3>
     <p>email@gmail.com</p>
+    <hr>
     <h3>Instagram</h3>
     <p>instagram@insta.com</p>
+    <hr>
+
+    <form class="" action="contact.html" method="post">
+        <label for="name">Your Name:</label>
+        <input type="text" name="name" id="name">
+    <br>
+        <label for="color">Choose the color you want</label>
+        <input type="color" name="color" id="color">
+    <br>
+        <label for="signup">Do you want to sign up for the newsletter?</label>
+        <input type="checkbox" name="signup" id="signup">
+    <br>
+        <input type="submit" value="submit">
+
+    </form>
+
+
+
+
     <p>Return to <a href="personalsite.html"><strong>main page</strong></a></p>
     
 </body>
