--- a/classproject/index.html
+++ b/classproject/index.html
@@ -21,6 +21,7 @@
         <nav class="navigation-left">
             <ul>
                 <li> <a href="index.html">Main Page</a> </li>
+                <li> <a href="000courseCompilation/index.html">Course Material Compilation</a> </li>
                 <li> <a href="001 Personal Site/personalsite.html">Personal Site</a> </li>
             </ul>
         </nav>
