--- a/classproject/000courseCompilation/index.html
+++ b/classproject/000courseCompilation/index.html
@@ -11,6 +11,7 @@
         <header>
             <h1>Course Material Example Compilation</h1>
         </header>
+<hr>
         <main>
 
             <section class="tables">
@@ -103,13 +104,13 @@
                     </tbody>
                 </table>
             </section>
-<hr>
+        <hr>
             <section class="forms">
                 <h3 class="section-heading">Forms</h3>
                 <br>
                 <div class="form form-email">
                     <h4>Email Form</h4>
-                        <form action="#">
+                        <form action="index.html" method="post">
                         <br>
                             <label for="name">Name:</label>
                             <input type="text" name="name" id="name"> 
@@ -117,11 +118,14 @@
                             <label for="email">Email:</label>
                             <input type="email" name="email" id="email">
                         <br>
-                            <textarea name="text" id="text" cols="100" rows="30"></textarea>
+                            <label for="text">Your Message:</label>
+                        <br>
+                            <textarea name="text" id="text" cols="30" rows="10"></textarea>
                         <br>
                             <input type="submit" name="submit" id="submit" value="submit">
                         </form>
                 </div>
+        <hr>
                 <div class="form form-signup">
                     <h4>Sign Up Form</h4>
                     <form action="">
@@ -132,13 +136,13 @@
                     </form>
                 </div>
             </section>
-<hr>
+        <hr>
             <section class="#">
                 next section
             </section>
 
         </main>
-        <hr>
+<hr>
         <footer>
             <p>Return to <a href="../index.html"><strong>main page</strong></a></p>
         </footer>
