--- a/classproject/000courseCompilation/index.html
+++ b/classproject/000courseCompilation/index.html
@@ -110,7 +110,7 @@
                 <br>
                 <div class="form form-email">
                     <h4>Email Form</h4>
-                        <form action="index.html" method="post">
+                        <form action="mailto:info@myemail.com" method="post" enctype="text/plain">
                         <br>
                             <label for="name">Name:</label>
                             <input type="text" name="name" id="name"> 
