--- a/classproject/index.html
+++ b/classproject/index.html
@@ -23,6 +23,7 @@
                 <li> <a href="index.html">Main Page</a> </li>
                 <li> <a href="000courseCompilation/index.html">Course Material Compilation</a> </li>
                 <li> <a href="001 Personal Site/personalsite.html">Personal Site</a> </li>
+                <li> <a href="002FindYourFutureMotorcycle/index.html">Find Your Future Motorcycle</a> </li>
             </ul>
         </nav>
 
