--- a/classproject/000courseCompilation/index.html
+++ b/classproject/000courseCompilation/index.html
@@ -117,23 +117,33 @@
                 <br>
                 <div class="form form-email">
                     <h4>Email Form</h4>
+                    <div class="description">
+                        <div class="description-item">
+                            <p class="description-topic">"action=mailto:emailAddress@gmail.com":</p>
+                            </p>Opens your email client with a fresh editor ready to send an email <em>FROM</em> the supplied email address.</p>
+                        </div>
+                        <div class="description-item">
+                            <p class="description-topic">"method="post":</p>
+                            <p>Fills that blank email with the supplied information</p>
+                        </div>
+                    </div>
                         <!-- set 'enctype' or your text won't display properly in the email -->
                         <form action="mailto:info@myemail.com" method="post" enctype="text/plain">
                         <br>
-                            <label for="name">Name:</label>
-                            <input type="text" name="name" id="name"> 
+                            <label for="yourName">Name:</label>
+                            <input type="text" name="yourName" id="yourName"> 
                         <br>
-                            <label for="email">Email:</label>
+                            <label for="yourEmail">Email:</label>
                             <!-- input type set to email runs checks automatically to make sure it is a propper email address -->
-                            <input type="email" name="yourEmail" id="email">
+                            <input type="yourEmail" name="yourEmail" id="yourEmail">
                         <br>
-                            <label for="text" name="yourMessage">Your Message:</label>
+                            <label for="yourMessage">Your Message:</label>
                         <br>
-                            <textarea name="text" id="text" cols="30" rows="10"></textarea>
+                            <textarea name="yourMessage" id="yourMessage" cols="30" rows="10"></textarea>
                         <br>
                             <input type="submit" name="submit" id="submit" value="submit">
                         </form>
-                    </div>
+                </div>
                     <br>
                 <div class="form form-signup">
                     <h4>Form Options</h4>
