--- a/classproject/001 Personal Site/contact.html
+++ b/classproject/001 Personal Site/contact.html
@@ -20,25 +20,29 @@
     <h3>Instagram</h3>
     <p>instagram@insta.com</p>
     <hr>
-
-    <form class="" action="contact.html" method="post">
-        <label for="name">Your Name:</label>
-        <input type="text" name="name" id="name">
-    <br>
-        <label for="color">Choose the color you want</label>
-        <input type="color" name="color" id="color">
-    <br>
-        <label for="signup">Do you want to sign up for the newsletter?</label>
-        <input type="checkbox" name="signup" id="signup">
-    <br>
-        <input type="submit" value="submit">
-
-    </form>
-
-
-
-
-    <p>Return to <a href="personalsite.html"><strong>main page</strong></a></p>
-    
+<!-- <p class="description-topic">"action=mailto:emailAddress@gmail.com":</p>
+</p>Opens your email client with a fresh editor ready to send an email <em>FROM</em> the supplied email address.</p>
+<p class="description-topic">"method="post":</p>
+<p>Fills that blank email with the supplied information</p> -->
+<!-- set 'enctype' or your text won't display properly in the email -->
+    <div class="form form-email">
+        <h4>Email Form</h4>
+        </div>
+            <form action="mailto:info@myemail.com" method="post" enctype="text/plain">
+            <br>
+                <label for="yourName">Name:</label>
+                <input type="text" name="yourName" id="yourName"> 
+            <br>
+                <label for="yourEmail">Email:</label>
+                <!-- input type set to email runs checks automatically to make sure it is a propper email address -->
+                <input type="yourEmail" name="yourEmail" id="yourEmail">
+            <br>
+                <label for="yourMessage">Your Message:</label>
+            <br>
+                <textarea name="yourMessage" id="yourMessage" cols="30" rows="10"></textarea>
+            <br>
+                <input type="submit" name="submit" id="submit" value="submit">
+            </form>
+    </div>
 </body>
 </html>
