--- a/classproject/001 Personal Site/personalsite.html
+++ b/classproject/001 Personal Site/personalsite.html
@@ -14,31 +14,34 @@
                     <img class="headshot" src="../imgs/circleme.png" alt="Steven profile picture">
                     <h1>Steven McIntyre</h1>
                 </div>
-                <nav class="top-bar_nav">
-                    <ul>
-                        <li>Work Examples</li>
-                        <li>Pricing / Get a Quote</li>
-                        <li>About Me</li>
-                        <li>Blog</li>
-                        <li>Contact Me</li>
-                    </ul>
-                </nav>
             </div>
-
-
-                            <p><em>Aspiring Web Developer</em></p>
-                            <p> I am a student of <em>web developement</em>.  I currently work in customer Service.  I love spending time with friends, going on adventures, motorcycles, and studying philosophy. 
-                            </p>
+            <div class="introduction"> 
+                <p><em>Aspiring Web Developer</em></p>
+                <p> I am a student of <em>web developement</em>.  I currently work in customer Service.  I love spending time with friends, going on adventures, motorcycles, and studying philosophy. 
+                </p>
+            </div>
+            <nav class="top-bar_nav">
+                <ul>
+                    <li>Work Examples</li>
+                    <li>Pricing / Get a Quote</li>
+                    <li>About Me</li>
+                    <li>Blog</li>
+                    <li>Contact Me</li>
+                </ul>
+            </nav>
         </header>
-    <hr>
-        <h3>Education</h3>
+        <hr>
+        <div class="education"> 
+            <h3>Education</h3>
             <ul>
                 <li>Strathroy Collegiat Institute</li>
                 <li>Fanshawe College - Machinist LVL 2</li>
                 <li>Udemy - The Complete 2021 Web Developement Bootcamp (in progress).</li>
             </ul>
-    <hr>
-        <h3>Work Experience</h3>
+        </div>
+        <hr>
+        <div class="workexperience"> 
+            <h3>Work Experience</h3>
             <table class="table-general">
                 <thead>
                     <tr>
@@ -57,8 +60,10 @@
                     </tr>
                 </tbody>
             </table>
-    <hr>
-        <h3>Skills</h3>
+        </div>
+        <hr>
+        <div class="skills"> 
+            <h3>Skills</h3>
             <table class="table-general">
                 <tr >
                     <td>
@@ -87,13 +92,18 @@
                     </td>
                 </tr>
             </table>
-    <hr>
-        <div>
+        </div>
+        <hr>
+        <div class="links">
+            <h3>Other Links</h3>
+            <div class="projects">
+                <h4>Projects</h4>
+                <a href="http://" target="_blank" rel="noopener noreferrer">Future Project</a>
+            </div>
             <h3><a href="myhobbies.html">My Hobbies</a></h3>
             <h3><a href="contact.html"</a>Contact Me</a></h3>
         </div>
-    <hr>
-        <p>Return to <a href="../index.html"><strong>main page</strong></a></p>
+        <hr>
         <script src="scripts.js"></script>
     </body>
 </html>
